pm_list: Show correct unread unread counts.
We only update the `.private_messages_header` here since
unread_counts of `.expanded_private_message` are updated
via `pm_list.update_private_messages`.

This fixes the bug of PMs in `.expanded_private_message` having
the same unread count as `private_messages_header`.

Since we rerender the DOM of `.expanded_private_message` every
time we update unread count of PMs, we don't need to manually
update them here. Also, we always keep them on display since
there is no real need to toggle them. They are not visible
when they have 0 unread counts via `.zero_count`.

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -252,6 +252,7 @@ li.active-sub-filter {
         /* This margin accounts for the fact that the private messages
            container gets a few pixels taller when expanded  */
         margin: 0;
+        display: inline;
     }
 
     i {
